Keyboard layout in profile

--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -64,7 +64,7 @@
             <string>monospace</string>
         </test>
         <edit binding="strong" mode="prepend" name="family">
-            <string>Iosevka Custom</string>
+            <string>Nimbus Mono</string>
         </edit>
     </match>
 
